Fix for missing horizontal scrolling in IE and inconsistent Person lookup results

--- a/web/src/main/resources/public/style/ie.css
+++ b/web/src/main/resources/public/style/ie.css
@@ -32,11 +32,6 @@ div.tab-container
 /**
  * Solves weird scroll bar in directory search.
  */
-html
-{
-	overflow-x: hidden;
-}
-
 .tab input
 {
     position: relative;
